# aip

./: .clang-format  CMakeLists.txt
cmake/: aipVersion.cmake.in
examples/: CMakeLists.txt  example_constrained_line_between_parabolas.cpp  example_parallel_primitive.cpp  example_parallel_primitive_no_results.cpp  example_single_primitive.cpp  example_single_primitive_strategy.cpp  example_struct_in_struct_out.cpp
include/aip/: Version.hpp  version.hpp
include/aip/core/: constrained_entry.hpp  entry_with_strategy_base.hpp  fixed_string.hpp  free_entry.hpp  ientry.hpp  orchestrator.hpp
include/aip/model/: domain_like.hpp  imodel.hpp  piecewise_model.hpp
include/aip/params/: control_param.hpp  macros.hpp  param_grid.hpp  param_traits.hpp  range_like.hpp  uniform_range.hpp  unit_grid.hpp
include/aip/search/: enumeration_strategy.hpp  index_space.hpp  index_space_from_grid.hpp  index_strategy.hpp  index_unrank.hpp  parallel_async.hpp  reverse_enumeration_strategy.hpp
tests/: CMakeLists.txt  test_constrained_line.cpp  test_control_param.cpp  test_enumeration_strategy.cpp  test_fixed_string.cpp  test_index_space.cpp  test_make_index_space.cpp  test_orch_stage1.cpp  test_orchestrator_strategy_enum.cpp  test_parallel_async.cpp  test_param_grid.cpp  test_param_traits.cpp  test_piecewise_model.cpp  test_uniform_range.cpp  test_unit_grid.cpp
