add_executable(aip_example_single_primitive example_single_primitive.cpp)
target_link_libraries(aip_example_single_primitive PRIVATE aip)

add_executable(aip_example_parallel_primitive example_parallel_primitive.cpp)
target_link_libraries(aip_example_parallel_primitive PRIVATE aip)

add_executable(aip_example_parallel_primitive_no_results example_parallel_primitive_no_results.cpp)
target_link_libraries(aip_example_parallel_primitive_no_results PRIVATE aip)

add_executable(aip_example_single_primitive_strategy example_single_primitive_strategy.cpp)
target_link_libraries(aip_example_single_primitive_strategy PRIVATE aip)

add_executable(aip_example_struct_in_struct_out example_struct_in_struct_out.cpp)
target_link_libraries(aip_example_struct_in_struct_out PRIVATE aip)

add_executable(aip_example_constrained_line_between_parabolas example_constrained_line_between_parabolas.cpp)
target_link_libraries(aip_example_constrained_line_between_parabolas PRIVATE aip)
